# ros_industrial_dashboard

./: CMakeLists.txt  package.xml  plugin.xml  ros_industrial_dashboard.rosinstall  setup.py
resource/: dashboard.ui
scripts/: dashboard
src/ros_industrial_dashboard/: dashboard.py
