<?xml version="1.0"?>
<package format="2">
  <name>ros_industrial_dashboard</name>
  <version>0.0.0</version>
  <description>The godel_simple_gui package presents an alternative front end for the Godel project that is focused on providing an easy to use, ATM-like interface for operating the system end to end.</description>

  <maintainer email="aderic@swri.org">Austin Deric</maintainer>
  <author email="aderic@swri.org">Austin Deric</author>
  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>rqt_gui</exec_depend>
  <exec_depend>rqt_gui_py</exec_depend>
  <exec_depend>packml_msgs</exec_depend>

  <export>
   <rviz plugin="${prefix}/plugin.xml"/>
  </export>

</package>
